--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,9 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="scripts/chess.min.js"></script>
     <script src="scripts/game.js"></script>
+    <script src="bower_componets/exchangejs/exchange_manager.js"></script>
+    <script src="bower_componets/exchangejs/exchange.js"></script>
+    <script src="bower_componets/exchangejs/md5.js"></script>
   </head>
   <body ng-app="chessApp">
     <!--[if lt IE 7]>
