CHES-2 #start-review CHES-5 #start-review moves are being recieved and interpereted properly

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angularfire/angularfire.js"></script>
     <script src="bower_components/angularfire/angularfire.min.js"></script>
-    
+    <script src="bower_components/exchangejs/exchange.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
