getting ready for polymer paper

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,12 @@
     <script src="bower_components/exchangejs/exchange_manager.js"></script>
     <script src="bower_components/exchangejs/exchange.js"></script>
     <script src="bower_components/exchangejs/md5.js"></script>
+    <script src="bower_components/platform/platform.js"></script>
+    <link rel="import" href="components/paper-input/paper-input.html">
+    <link rel="import" href="components/paper-toast/paper-toast.html">
+    <link rel="import" href="components/paper-dialog/paper-dialog.html">
+    <link rel="import" href="components/paper-button/paper-button.html">
+
   </head>
   <body ng-app="chessApp">
     <!--[if lt IE 7]>
