getting the main page ready

--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,10 @@
     <link rel="import" href="bower_components/paper-dialog/paper-dialog-transition.html">
     <link rel="import" href="bower_components/paper-button/paper-button.html">
     <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
-    <link href="bower_components/core-icons/core-icons.html" rel="import">
+    <link rel="import" href="bower_components/paper-fab/paper-fab.html">
 
+    <link href="bower_components/core-icons/core-icons.html" rel="import">
+    <link href="bower_components/core-icons/iconsets/social-icons.html" rel="import">
 
   </head>
   <body ng-app="chessApp">
