--- a/app/index.html
+++ b/app/index.html
@@ -50,21 +50,35 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
-       navigator.getUserMedia = new Promise(function(resolve, reject) {
-        // do a thing, possibly async, then…
+       navigator.requestCamera = function(options){
+         return new Promise(function(resolve, reject) {
+            // do a thing, possibly async, then…
+            navigator.getUserMedia = (navigator.getUserMedia ||
+                            navigator.webkitGetUserMedia ||
+                            navigator.mozGetUserMedia ||
+                            navigator.msGetUserMedia);
 
-        var userMedia = (navigator.getUserMedia ||
-                        navigator.webkitGetUserMedia ||
-                        navigator.mozGetUserMedia ||
-                        navigator.msGetUserMedia); 
+            navigator.getUserMedia(
+              options,
+              function(stream) {
+                // console.log('joining player got video', peerManager);
+                // $scope.startVideoChat();
+                // my_video = stream;
+                //
+                // console.log(stream);
+                // // $scope.local_stream = $sce.trustAs($sce.RESOURCE_URL, window.URL.createObjectURL(stream));
+                // $scope.$apply();
+                resolve(stream);
 
-        if (/* everything turned out fine */) {
-          resolve("Stuff worked!");
+              },
+              function(error){
+                reject(error);
+              }
+            );
+
+
+          });
         }
-        else {
-          reject(Error("It broke"));
-        }
-      })
 
       //  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       //  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
