--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
 
     <link href="bower_components/core-icons/core-icons.html" rel="import">
     <link href="bower_components/core-icons/iconsets/social-icons.html" rel="import">
+    <link href="bower_components/core-icons/iconsets/communication-icons.html" rel="import">
 
   </head>
   <body ng-app="chessApp">
