basic game play works

--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/chessboardjs/css/chessboard.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/game.css">
 
 
-    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
-    <script src="scripts/chess.min.js"></script>
-    <script src="scripts/game.js"></script>
-    <script src="bower_components/exchangejs/exchange_manager.js"></script>
     <script src="bower_components/exchangejs/exchange.js"></script>
-    <script src="bower_components/exchangejs/md5.js"></script>
     <script src="bower_components/platform/platform.js"></script>
+    <script src="bower_components/chess.js/chess.js"></script>
+    <script src="bower_components/chessboardjs/js/chessboard.js"></script>
 
 
     <link rel="import" href="bower_components/paper-input/paper-input.html">
@@ -82,12 +80,10 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-    <script src="bower_components/angularfire/angularfire.js"></script>
-    <script src="bower_components/angularfire/angularfire.min.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/game.js"></script>
+    <script src="scripts/directives/board.js"></script>
 </body>
 </html>
